--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@payos/node": "^1.0.10",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "bookingplatform_node": "file:",
@@ -19,6 +20,7 @@
     "dotenv": "^16.4.7",
     "eslint-plugin-react-hooks": "^5.1.0",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
